# Snake-Clone

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  apple.cpp  apple.hpp  main.cpp  score.cpp  score.hpp  snake.cpp  snake.hpp
src/states/: game.cpp  game.hpp  intro.cpp  intro.hpp  main.cpp  main.hpp  pause.hpp  states.hpp
